// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Crosshair share code > should generate ConVars from crosshair 1`] = `
"
cl_crosshair_drawoutline "1"
cl_crosshair_dynamic_maxdist_splitratio "0.5"
cl_crosshair_dynamic_splitalpha_innermod "0.6"
cl_crosshair_dynamic_splitalpha_outermod "0.4"
cl_crosshair_dynamic_splitdist "6"
cl_crosshair_outlinethickness "2"
cl_crosshair_t "1"
cl_crosshairalpha "137"
cl_crosshaircolor "5"
cl_crosshaircolor_b "213"
cl_crosshaircolor_g "81"
cl_crosshaircolor_r "175"
cl_crosshairdot "1"
cl_crosshairgap "-1.3"
cl_crosshairgap_useweaponvalue "1"
cl_crosshairsize "4.6"
cl_crosshairstyle "2"
cl_crosshairthickness "1.2"
cl_crosshairusealpha "1"
cl_fixedcrosshairgap "3"
cl_crosshair_recoil "0"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 2`] = `
"
cl_crosshair_drawoutline "0"
cl_crosshair_dynamic_maxdist_splitratio "0.3"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.5"
cl_crosshair_dynamic_splitdist "7"
cl_crosshair_outlinethickness "1"
cl_crosshair_t "0"
cl_crosshairalpha "200"
cl_crosshaircolor "1"
cl_crosshaircolor_b "50"
cl_crosshaircolor_g "250"
cl_crosshaircolor_r "50"
cl_crosshairdot "0"
cl_crosshairgap "1"
cl_crosshairgap_useweaponvalue "0"
cl_crosshairsize "5"
cl_crosshairstyle "3"
cl_crosshairthickness "0.5"
cl_crosshairusealpha "0"
cl_fixedcrosshairgap "3"
cl_crosshair_recoil "0"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 3`] = `
"
cl_crosshair_drawoutline "0"
cl_crosshair_dynamic_maxdist_splitratio "0.3"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.5"
cl_crosshair_dynamic_splitdist "7"
cl_crosshair_outlinethickness "1"
cl_crosshair_t "0"
cl_crosshairalpha "200"
cl_crosshaircolor "5"
cl_crosshaircolor_b "50"
cl_crosshaircolor_g "250"
cl_crosshaircolor_r "50"
cl_crosshairdot "1"
cl_crosshairgap "1"
cl_crosshairgap_useweaponvalue "1"
cl_crosshairsize "5"
cl_crosshairstyle "1"
cl_crosshairthickness "0.5"
cl_crosshairusealpha "1"
cl_fixedcrosshairgap "4.3"
cl_crosshair_recoil "0"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 4`] = `
"
cl_crosshair_drawoutline "0"
cl_crosshair_dynamic_maxdist_splitratio "0.3"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.5"
cl_crosshair_dynamic_splitdist "7"
cl_crosshair_outlinethickness "1"
cl_crosshair_t "0"
cl_crosshairalpha "200"
cl_crosshaircolor "5"
cl_crosshaircolor_b "50"
cl_crosshaircolor_g "250"
cl_crosshaircolor_r "50"
cl_crosshairdot "1"
cl_crosshairgap "1"
cl_crosshairgap_useweaponvalue "1"
cl_crosshairsize "5"
cl_crosshairstyle "2"
cl_crosshairthickness "0.5"
cl_crosshairusealpha "1"
cl_fixedcrosshairgap "4.3"
cl_crosshair_recoil "1"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 5`] = `
"
cl_crosshair_drawoutline "1"
cl_crosshair_dynamic_maxdist_splitratio "1"
cl_crosshair_dynamic_splitalpha_innermod "0"
cl_crosshair_dynamic_splitalpha_outermod "1"
cl_crosshair_dynamic_splitdist "3"
cl_crosshair_outlinethickness "1"
cl_crosshair_t "0"
cl_crosshairalpha "200"
cl_crosshaircolor "1"
cl_crosshaircolor_b "50"
cl_crosshaircolor_g "250"
cl_crosshaircolor_r "50"
cl_crosshairdot "0"
cl_crosshairgap "-2.2"
cl_crosshairgap_useweaponvalue "1"
cl_crosshairsize "10"
cl_crosshairstyle "2"
cl_crosshairthickness "0.6"
cl_crosshairusealpha "1"
cl_fixedcrosshairgap "3"
cl_crosshair_recoil "1"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 6`] = `
"
cl_crosshair_drawoutline "0"
cl_crosshair_dynamic_maxdist_splitratio "0.5"
cl_crosshair_dynamic_splitalpha_innermod "0.5"
cl_crosshair_dynamic_splitalpha_outermod "0.6"
cl_crosshair_dynamic_splitdist "7"
cl_crosshair_outlinethickness "1"
cl_crosshair_t "1"
cl_crosshairalpha "136"
cl_crosshaircolor "5"
cl_crosshaircolor_b "227"
cl_crosshaircolor_g "88"
cl_crosshaircolor_r "232"
cl_crosshairdot "1"
cl_crosshairgap "-1.2"
cl_crosshairgap_useweaponvalue "0"
cl_crosshairsize "7.2"
cl_crosshairstyle "2"
cl_crosshairthickness "1.5"
cl_crosshairusealpha "0"
cl_fixedcrosshairgap "3"
cl_crosshair_recoil "1"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 7`] = `
"
cl_crosshair_drawoutline "1"
cl_crosshair_dynamic_maxdist_splitratio "0.3"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.45"
cl_crosshair_dynamic_splitdist "7"
cl_crosshair_dynamic_spread_limit "255"
cl_crosshair_gap "4"
cl_crosshair_length "8"
cl_crosshair_recoil "0"
cl_crosshair_screen_height "1080"
cl_crosshair_t "0"
cl_crosshair_thickness "3"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "192"
cl_crosshaircolor_g "15"
cl_crosshaircolor_r "252"
cl_crosshairdot "1"
cl_crosshairstyle "6"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 8`] = `
"
cl_crosshair_drawoutline "0"
cl_crosshair_dynamic_maxdist_splitratio "0"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.3"
cl_crosshair_dynamic_splitdist "4"
cl_crosshair_dynamic_spread_limit "181"
cl_crosshair_gap "0"
cl_crosshair_length "0"
cl_crosshair_recoil "0"
cl_crosshair_screen_height "768"
cl_crosshair_t "0"
cl_crosshair_thickness "3"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "255"
cl_crosshaircolor_g "40"
cl_crosshaircolor_r "0"
cl_crosshairdot "1"
cl_crosshairstyle "4"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 9`] = `
"
cl_crosshair_drawoutline "1"
cl_crosshair_dynamic_maxdist_splitratio "1"
cl_crosshair_dynamic_splitalpha_innermod "0"
cl_crosshair_dynamic_splitalpha_outermod "1"
cl_crosshair_dynamic_splitdist "3"
cl_crosshair_dynamic_spread_limit "255"
cl_crosshair_gap "0"
cl_crosshair_length "4"
cl_crosshair_recoil "1"
cl_crosshair_screen_height "1080"
cl_crosshair_t "0"
cl_crosshair_thickness "5"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "61"
cl_crosshaircolor_g "14"
cl_crosshaircolor_r "172"
cl_crosshairdot "1"
cl_crosshairstyle "4"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 10`] = `
"
cl_crosshair_drawoutline "1"
cl_crosshair_dynamic_maxdist_splitratio "0.3"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.4"
cl_crosshair_dynamic_splitdist "6"
cl_crosshair_dynamic_spread_limit "227"
cl_crosshair_gap "2"
cl_crosshair_length "2"
cl_crosshair_recoil "0"
cl_crosshair_screen_height "960"
cl_crosshair_t "0"
cl_crosshair_thickness "2"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "14"
cl_crosshaircolor_g "255"
cl_crosshaircolor_r "0"
cl_crosshairdot "0"
cl_crosshairstyle "6"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 11`] = `
"
cl_crosshair_drawoutline "1"
cl_crosshair_dynamic_maxdist_splitratio "0.3"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.45"
cl_crosshair_dynamic_splitdist "7"
cl_crosshair_dynamic_spread_limit "255"
cl_crosshair_gap "4"
cl_crosshair_length "8"
cl_crosshair_recoil "0"
cl_crosshair_screen_height "1080"
cl_crosshair_t "0"
cl_crosshair_thickness "1"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "0"
cl_crosshaircolor_g "255"
cl_crosshaircolor_r "0"
cl_crosshairdot "0"
cl_crosshairstyle "3"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 12`] = `
"
cl_crosshair_drawoutline "0"
cl_crosshair_dynamic_maxdist_splitratio "0.3"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.4"
cl_crosshair_dynamic_splitdist "7"
cl_crosshair_dynamic_spread_limit "255"
cl_crosshair_gap "4"
cl_crosshair_length "8"
cl_crosshair_recoil "0"
cl_crosshair_screen_height "1080"
cl_crosshair_t "0"
cl_crosshair_thickness "2"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "50"
cl_crosshaircolor_g "250"
cl_crosshaircolor_r "50"
cl_crosshairdot "0"
cl_crosshairstyle "4"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 13`] = `
"
cl_crosshair_drawoutline "1"
cl_crosshair_dynamic_maxdist_splitratio "0"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.35"
cl_crosshair_dynamic_splitdist "3"
cl_crosshair_dynamic_spread_limit "181"
cl_crosshair_gap "25"
cl_crosshair_length "7"
cl_crosshair_recoil "0"
cl_crosshair_screen_height "768"
cl_crosshair_t "0"
cl_crosshair_thickness "20"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "57"
cl_crosshaircolor_g "57"
cl_crosshaircolor_r "124"
cl_crosshairdot "1"
cl_crosshairstyle "8"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 14`] = `
"
cl_crosshair_drawoutline "0"
cl_crosshair_dynamic_maxdist_splitratio "0"
cl_crosshair_dynamic_splitalpha_innermod "1"
cl_crosshair_dynamic_splitalpha_outermod "0.3"
cl_crosshair_dynamic_splitdist "3"
cl_crosshair_dynamic_spread_limit "255"
cl_crosshair_gap "0"
cl_crosshair_length "5"
cl_crosshair_recoil "1"
cl_crosshair_screen_height "768"
cl_crosshair_t "0"
cl_crosshair_thickness "1"
cl_crosshaircolor_a "255"
cl_crosshaircolor_b "0"
cl_crosshaircolor_g "0"
cl_crosshaircolor_r "255"
cl_crosshairdot "1"
cl_crosshairstyle "2"
"
`;
